--- a/inc/customizer/custom-controls/border/border.scss
+++ b/inc/customizer/custom-controls/border/border.scss
@@ -51,6 +51,7 @@
 				-webkit-box-flex: 1;
 				-ms-flex: auto;
 				flex: auto;
+				margin-bottom: 0;
 				input.ast-border-input{
 					text-align: center;
 				}
