--- a/inc/customizer/custom-controls/responsive/responsive.css
+++ b/inc/customizer/custom-controls/responsive/responsive.css
@@ -1,5 +1,4 @@
-.ast-responsive-btns,
-.customize-control-title {
+.ast-responsive-btns {
   display: inline-block;
 }
 
